--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 
 .Dancing-Script {
   font-family: "Dancing Script", cursive;
+  font-weight: 400;
 }
 
 .inter-font {
@@ -17,16 +18,26 @@
 body {
   background-color: black;
   color: white;
-  margin-left: 190px;
-  margin-right: 190px;
+}
+header {
+  background: linear-gradient(
+    180deg,
+    rgb(17, 17, 17),
+    rgba(119, 119, 119, 0) 100%
+  );
 }
 
 /* navbar design starts */
 .navbar {
-  margin-top: 58px;
+  margin-left: 190px;
+  margin-right: 190px;
+  padding-top: 58px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.icon {
+  display: none;
 }
 .nav-brand {
   font-size: 36px;
@@ -58,4 +69,218 @@ body {
 }
 .about {
   margin-right: 20px;
+}
+/* navbar ends */
+/* banner section starts */
+.banner {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 50px;
+  margin-left: 190px;
+  margin-right: 190px;
+}
+.banner-imgdes {
+  position: relative;
+
+  padding: 40px;
+}
+.card1 {
+  background: transparent;
+  border-radius: 12px;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 17px 24px;
+  position: absolute;
+  top: 10rem;
+  right: 0;
+}
+.card1 > h2 {
+  font-size: 40px;
+  font-weight: 900;
+}
+.card1 > p {
+  color: rgba(255, 255, 255, 0.65);
+  font-size: 13px;
+}
+.circle {
+  width: 40px;
+  height: 40px;
+
+  border-radius: 50%;
+  background-color: rgb(230, 83, 60);
+}
+.card2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  background: transparent;
+  border-radius: 12px;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 17px 24px;
+  position: absolute;
+  bottom: 7rem;
+  left: -3rem;
+}
+.description > h2 {
+  font-size: 24px;
+  font-weight: 900;
+}
+.description > p {
+  color: rgba(255, 255, 255, 0.65);
+  font-size: 16px;
+}
+
+.banner-content > h1 {
+  font-size: 78px;
+  font-weight: 900;
+  margin-bottom: 28px;
+}
+.banner-content > p {
+  font-size: 16px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
+  margin-bottom: 28px;
+}
+.btn1 {
+  font-size: 18px;
+  font-weight: 600;
+  padding: 16px 40px;
+  background-color: rgb(230, 83, 60);
+  color: rgb(255, 255, 255);
+  border-radius: 42px;
+  border: none;
+}
+.btn2 {
+  font-size: 18px;
+  font-weight: 600;
+  padding: 16px 40px;
+  border-radius: 42px;
+  border: 1px solid white;
+  background-color: transparent;
+  color: white;
+}
+.button {
+  display: flex;
+
+  align-items: center;
+  gap: 14px;
+}
+
+/* media query */
+@media screen and (max-width: 576px) {
+  .navbar {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .nav-items {
+    display: none;
+  }
+  .icon {
+    display: contents;
+    width: 24px;
+  }
+  .banner {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .banner-content > h1 {
+    font-size: 36px;
+    font-weight: 900;
+    margin-bottom: 28px;
+  }
+  .banner-content > p {
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+    margin-bottom: 28px;
+  }
+
+  .btn1 {
+    font-size: 18px;
+    font-weight: 600;
+    padding: 16px 40px;
+    background-color: rgb(230, 83, 60);
+    color: rgb(255, 255, 255);
+    border-radius: 42px;
+    border: none;
+  }
+  .btn2 {
+    font-size: 18px;
+    font-weight: 600;
+    padding: 16px 40px;
+    border-radius: 42px;
+    border: 1px solid white;
+    background-color: transparent;
+    color: white;
+  }
+  .button {
+    display: flex;
+
+    align-items: center;
+    gap: 14px;
+  }
+
+  .card1 {
+    background: transparent;
+    border-radius: 12px;
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 12px 18px;
+    position: absolute;
+    top: 5rem;
+    right: 0;
+  }
+  .card1 > h2 {
+    font-size: 30px;
+    font-weight: 900;
+  }
+  .card1 > p {
+    color: rgba(255, 255, 255, 0.65);
+    font-size: 9px;
+  }
+  .circle {
+    width: 40px;
+    height: 40px;
+
+    border-radius: 50%;
+    background-color: rgb(230, 83, 60);
+  }
+  .card2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    background: transparent;
+    border-radius: 12px;
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 12px 18px;
+    position: absolute;
+    bottom: 7rem;
+    left: 0;
+  }
+  .description > h2 {
+    font-size: 18px;
+    font-weight: 900;
+  }
+  .description > p {
+    color: rgba(255, 255, 255, 0.65);
+    font-size: 12px;
+  }
+  .banner-imgdes {
+    position: relative;
+
+    padding: 20px;
+  }
 }
