--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ header {
 
 /* navbar design starts */
 .navbar {
-  margin-left: 190px;
-  margin-right: 190px;
+  margin-left: 140px;
+  margin-right: 140px;
   padding-top: 58px;
   display: flex;
   justify-content: space-between;
@@ -57,7 +57,6 @@ header {
   margin-top: 4px;
   margin-bottom: 4px;
   font-size: 1rem;
-  font-weight: 400;
   color: rgb(255, 255, 255);
 }
 .home {
@@ -78,8 +77,8 @@ header {
   justify-content: space-between;
   align-items: center;
   gap: 54px;
-  margin-left: 190px;
-  margin-right: 190px;
+  margin-left: 140px;
+  margin-right: 140px;
 }
 .banner-imgdes {
   position: relative;
@@ -133,7 +132,7 @@ header {
 }
 
 .banner-content > h1 {
-  font-size: 78px;
+  font-size: 70px;
   font-weight: 900;
   margin-bottom: 28px;
 }
@@ -220,6 +219,49 @@ header {
   border-radius: 50%;
 }
 
+/* img and des starts */
+.des-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 82px;
+  margin-left: 190px;
+  margin-right: 190px;
+  background-color: rgb(34, 34, 34);
+  border-radius: 18px;
+}
+.description-run {
+  padding: 40px 50px;
+}
+.bigimg {
+  margin-right: 20px;
+}
+.motaimg {
+  border-radius: 20px;
+  width: 360px;
+}
+
+.run-h {
+  font-size: 48px;
+  font-weight: 900;
+  margin: 14px 0px;
+}
+.run-p {
+  font-size: 14px;
+  font-weight: 400px;
+  color: rgba(255, 255, 255, 0.5);
+  margin-bottom: 34px;
+}
+.btn-join {
+  background-color: rgb(230, 83, 60);
+  border-radius: 42px;
+  color: white;
+  font-size: 18px;
+  border: none;
+  font-weight: 600;
+  padding: 16px 40px;
+}
 /* media query */
 @media screen and (max-width: 576px) {
   .navbar {
@@ -339,12 +381,78 @@ header {
   .img-container {
     display: flex;
     flex-direction: column;
-
     justify-content: center;
     align-items: center;
     text-align: center;
     margin-top: 50px;
     margin-left: 190px;
     margin-right: 190px;
+  }
+  .img-1 > img {
+    margin-top: 20px;
+    border-radius: 50%;
+  }
+  .img-2 > img {
+    margin-top: 20px;
+    border-radius: 50%;
+  }
+  .img-3 > img {
+    margin-top: 20px;
+    border-radius: 50%;
+  }
+  .img-4 > img {
+    margin-top: 20px;
+    border-radius: 50%;
+  }
+
+  /* img and des starts */
+  .des-img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 66px;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: rgb(34, 34, 34);
+    border-radius: 18px;
+  }
+  .run-h {
+    font-size: 32px;
+    font-weight: 900;
+  }
+
+  .description-run {
+    padding: 30px;
+  }
+
+  .bigimg {
+    margin-right: 0;
+    margin-bottom: 35px;
+    padding: 0px;
+  }
+  .motaimg {
+    border-radius: 20px;
+    max-width: 315px;
+    margin-right: 0;
+  }
+
+  .run-p {
+    font-size: 14px;
+    font-weight: 400px;
+    color: rgba(255, 255, 255, 0.5);
+    margin-bottom: 34px;
+  }
+  .btn-join {
+    width: 100%;
+
+    text-align: center;
+    background-color: rgb(230, 83, 60);
+    border-radius: 42px;
+    color: white;
+    font-size: 18px;
+    border: none;
+    font-weight: 600;
+    padding: 16px 40px;
   }
 }
