--- a/style.css
+++ b/style.css
@@ -262,6 +262,143 @@ header {
   font-weight: 600;
   padding: 16px 40px;
 }
+/* trainninng sec */
+.training-sec {
+  margin: 100px 190px;
+}
+.training-sec h2 {
+  font-size: 48px;
+  font-weight: 900;
+  margin-bottom: 14px;
+}
+.training-sec p {
+  font-size: 14px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+/* grid section */
+.grid-container {
+  margin-left: 190px;
+  margin-right: 190px;
+}
+.grid-container1 {
+  display: grid;
+  grid-template-columns: 1.3fr 2fr 1.5fr;
+}
+.grid-container2 {
+  display: grid;
+  grid-template-columns: 1.8fr 1.5fr 1.6fr;
+}
+
+.grid-container1 img,
+.grid-container2 img {
+  height: 200px;
+}
+.grid-1,
+.grid-2,
+.grid-3,
+.grid-4 {
+  position: relative;
+}
+
+.grid-1 img,
+.grid-2 img,
+.grid-3 img,
+.grid-4 img {
+  display: block;
+  width: 100%;
+}
+
+.text-background1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(6, 255, 210, 0.5);
+  z-index: 1;
+}
+.text-background2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0.3);
+  z-index: 1;
+}
+.text-background3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+.text-background4 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+.text-background5 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(66, 255, 0, 0.3);
+  z-index: 1;
+}
+.text-background6 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 71, 255, 0.3);
+  z-index: 1;
+}
+
+.grid-1 p {
+  position: absolute;
+  top: 80%;
+  left: 10%;
+  z-index: 2;
+  color: black;
+  margin: 0;
+}
+.grid-2 p {
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  z-index: 2;
+  color: white;
+  margin: 0;
+}
+.grid-3 p {
+  position: absolute;
+  top: 80%;
+  left: 10%;
+  z-index: 2;
+  color: white;
+  margin: 0;
+}
+
+.grid-4 p {
+  position: absolute;
+  top: 20%;
+  left: 70%;
+  z-index: 2;
+  color: white;
+  margin: 0;
+}
+
 /* media query */
 @media screen and (max-width: 576px) {
   .navbar {
